[package]
name = "nectarflower-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client for interacting with Hive nodes via JSON-RPC, inspired by nectarflower-go."
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
